# P1

./: .gitignore  CMakeLists.txt  IMDBTop250MoviesNY.csv  P1.code-workspace  README.md  SOF_22.c  Young people are more sad 1.2.docx  a.out  dataLoad.c  dataLoad.h  genres.c  genres.h  grading.c  main.c  movie.c  movie.h  ratings.c  ratings.h  sadness.c  sadness.h  sadness2.c  scoreMovies.c  search.c  search.h  themes.c  themes.h  userProfiles.c  userProfiles.h  userSearch.c  userSearch.h
.github/workflows/: build.yml
resources/: IMDBTop250Movies.csv
src/: main.c
src/account/: accountCheck.c  accountCheck.h  ratings.c  ratings.h  saveLastMovie.c  saveLastMovie.h
src/data/: dataLoad.c
src/genres/: genres.c
src/moods/: sadness.c  sadness.h
src/movies/: movie.c  movie.h  scoreMovies.h
src/search/: search.c  search.h
